@@ -8,7 +8,7 @@
 <p><label for="password">Password</label><br/>
 <%%= password_field '<%= file_name %>', 'password' %></p>
 
-<p><label for="password">Confirm Password</label><br/>
+<p><label for="password_confirmation">Confirm Password</label><br/>
 <%%= password_field '<%= file_name %>', 'password_confirmation' %></p>
 
 <p><%%= submit_tag 'Sign up' %></p>
